kubernetes/product/product.yml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "product-service"
  name: "product-service"
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8083
  selector:
    app: "maxilog-product"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "maxilog-product"
  name: "maxilog-product"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "maxilog-product"
  template:
    metadata:
      labels:
        app: "maxilog-product"
    spec:
      containers:
        - image: "maxilog/product:latest"
          imagePullPolicy: "IfNotPresent"
          name: "maxilog-product"
          ports:
            - containerPort: 8083
              name: "product-http"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product
#  annotations:
#    plugins.konghq.com: kong-oidc
spec:
  rules:
    - http:
        paths:
          - path: /product
            backend:
              serviceName: product-service
              servicePort: 80
